# feast-gcp

./: .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  main.py  pyproject.toml
.github/workflows/: deploy.yml  plan.yml
cloud_fn/: main.py  requirements.txt
feast_gcp/: custom_logging.py  feast_client.py  utils.py
feature_repo/entities/dinner/: entity.py  recent_rez.py
feature_repo/feature_services/: seq_rec.py
feature_repo/local/: docker-compose.yml  feature_store.yaml
feature_repo/prod/: feature_store.yaml
infra/: cloud_run.tf  event_push.tf  gke.tf  gke_deployment_service.yaml  main.tf  memorystore.tf  outputs.tf  scheduler.tf  variables.tf  vpc.tf
